:zap: [Enhance] app.css: always leave space for scrollbar to avoid elements flicker

--- a/quasar/src/css/app.css
+++ b/quasar/src/css/app.css
@@ -82,6 +82,10 @@ body.body--dark hit {
 }
 
 /* Scrollbar */
+body {
+  overflow-y: scroll;
+}
+
 ::-webkit-scrollbar {
   height: 12px;
   width: 12px;
